simplifying logic in recommendation engine and fixing grpc connection issue