@@ -19,6 +19,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -31,7 +32,7 @@ public class RecommendationEngine {
     private final SongRepository songRepository;
     private final UserRepository userRepository;
     private final AlbumRepository albumRepository;
-    private final Map<Integer, Double> weekToMultiplierMap;
+    private final Map<Integer, Double> monthToMultiplierMap;
 
     @Autowired
     public RecommendationEngine(UserSongService userSongService,
@@ -42,23 +43,31 @@ public class RecommendationEngine {
         this.songRepository = songRepository;
         this.userRepository = userRepository;
         this.albumRepository = albumRepository;
-        this.weekToMultiplierMap = Map.of(
-                1, 1.0,
-                2, 0.8,
-                3, 0.6,
-                4, 0.5
+        this.monthToMultiplierMap = Map.ofEntries(
+                Map.entry(1, 1.0),
+                Map.entry(2, 0.8),
+                Map.entry(3, 0.6),
+                Map.entry(4, 0.5),
+                Map.entry(5, 0.4),
+                Map.entry(6, 0.3),
+                Map.entry(7, 0.25),
+                Map.entry(8, 0.25),
+                Map.entry(9, 0.25),
+                Map.entry(10, 0.2),
+                Map.entry(11, 0.2),
+                Map.entry(12, 0.1)
         );
     }
 
-    private Map<Long, Double> getSongsWithWeightedOccurrenceCount(Long songId, Long userId, int weeksBefore) {
+    private Stream<Map.Entry<Long, Double>> getSongsWithWeightedOccurrenceCount(Long songId, Long userId, int monthsBefore) {
 
-        if (weeksBefore < 1) {
+        if (monthsBefore < 1) {
             throw new RuntimeException();
         }
 
-        double multiplier = weekToMultiplierMap.getOrDefault(weeksBefore, 0.25);
-        Date dateGivenWeeksAgoStart = getDateWeeksFromToday(weeksBefore);
-        Date dateGivenWeeksAgoEnd = weeksBefore == 1 ? new Date() : getDateWeeksFromToday(weeksBefore - 1);
+        double multiplier = monthToMultiplierMap.getOrDefault(monthsBefore, 0.1);
+        Date dateGivenMonthsAgoStart = getDateMonthsFromToday(monthsBefore);
+        Date dateGivenMonthsAgoEnd = monthsBefore == 1 ? new Date() : getDateMonthsFromToday(monthsBefore - 1);
 
         Optional<Song> songOpt = songRepository.findByIdAndProtectionTypeInOrUser(
                 songId,
@@ -67,7 +76,7 @@ public class RecommendationEngine {
         );
 
         if (songOpt.isEmpty()) {
-            return Map.of();
+            return Stream.of();
         }
 
         Song s = songOpt.orElseThrow(UnauthenticatedException::new);
@@ -75,73 +84,62 @@ public class RecommendationEngine {
         Set<Long> tagsForSong = s.getTags().stream().map(Tag::getId).collect(Collectors.toSet());
 
         Set<UserSong> usersWhoListenedToTheSong = userSongService.getListensForSongAndCreatedAtGreaterThan(
-                songId, dateGivenWeeksAgoStart, dateGivenWeeksAgoEnd
+                songId, dateGivenMonthsAgoStart, dateGivenMonthsAgoEnd
         );
 
         //songs with the same tag
-        Set<UserSong> songsOfUsersWhoListenedToTheSong = userSongService.getSongsForUsersAndCreatedAtGreaterThan(
-                usersWhoListenedToTheSong
-                        .stream()
-                        .parallel()
-                        .map(UserSong::getUserId)
-                        .filter(id -> !id.equals(userId))
-                        .collect(Collectors.toSet()),
-                tagsForSong,
-                dateGivenWeeksAgoStart,
-                dateGivenWeeksAgoEnd
-        );
-
-        Map<Long, Song> alreadyQueriedSongs = new ConcurrentHashMap<>();
-        Map<Long, Double> songOccurrenceMap = new ConcurrentHashMap<>();
-        songsOfUsersWhoListenedToTheSong.stream().parallel()
-                .forEach(userSong -> {
-                    var song = alreadyQueriedSongs.get(userSong.getSongId());
-
-                    if (song == null) {
-                        song = songRepository.findById(userSong.getSongId()).orElse(null);
-                        if (song != null) {
-                            alreadyQueriedSongs.put(songId, song);
-                        }
-                    }
-
-                    if (song != null) {
-                        songOccurrenceMap.merge(song.getId(), multiplier, Double::sum);
-                    }
-                });
-        return songOccurrenceMap;
+        return userSongService.getSongsForUsersAndCreatedAtGreaterThan(
+                        usersWhoListenedToTheSong
+                                .stream()
+                                .parallel()
+                                .map(UserSong::getUserId)
+                                .filter(id -> !id.equals(userId))
+                                .collect(Collectors.toSet()),
+                        tagsForSong,
+                        dateGivenMonthsAgoStart,
+                        dateGivenMonthsAgoEnd
+                ).stream().collect(Collectors.groupingBy(UserSong::getSongId)).entrySet().stream()
+                .map(entry -> Map.entry(entry.getKey(), multiplier * entry.getValue().size()));
     }
 
     public List<Long> createRecommendationsForSong(Long songId, Long userId) {
-        try (ExecutorService executorService = Executors.newFixedThreadPool(4)) {
-            return IntStream.range(0, 3)
+        try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
+            var sortedSongsIds = IntStream.range(0, 11)
                     .mapToObj(i -> executorService.submit(
-                                    () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)
-                                            .entrySet()
-                                            .stream()
-                            )
-                    )
+                            () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)))
                     .map(future -> {
                         try {
                             return future.get();
                         } catch (ExecutionException | InterruptedException e) {
-                            log.error("Exception happened: {}", e.getMessage());
+                            logError(e);
                         }
                         return null;
                     })
                     .filter(Objects::nonNull)
-                    .flatMap(Stream::parallel)
+                    .flatMap(Function.identity())
+                    .peek(o -> log.info("{}", o))
                     .collect(Collectors.toMap(
-                                    Map.Entry::getKey,
-                                    Map.Entry::getValue,
-                                    Double::sum
-                            )
-                    ).entrySet()
+                            Map.Entry::getKey,
+                            Map.Entry::getValue,
+                            Double::sum,
+                            LinkedHashMap::new))
+                    .entrySet()
                     .stream()
                     .map(Pair::new)
                     .sorted((p1, p2) -> Double.compare(p2.getSecond(), p1.getSecond()))
                     .map(Pair::getFirst)
                     .filter(id -> !id.equals(songId))
                     .toList();
+
+            sortedSongsIds = userSongService.filterOutRestrictedSongs(userId, sortedSongsIds);
+
+            if (sortedSongsIds.size() < 20) {
+                return Stream.concat(sortedSongsIds.stream(),
+                        defaultRecommendations(
+                                20L - sortedSongsIds.size(),
+                                Stream.concat(sortedSongsIds.stream(), Stream.of(songId)).toList()).stream()).toList();
+            }
+            return sortedSongsIds;
         }
     }
 
@@ -150,47 +148,38 @@ public class RecommendationEngine {
         long start = System.currentTimeMillis();
 
         if (userId.equals(0L)) {
-            return songRepository.findByProtectionTypeOrderByListenCount(
-                    ProtectionType.PUBLIC,
-                    NON_AUTHENTICATED_USER_LIMIT
-            );
+            return defaultRecommendations();
         }
 
         userRepository.findById(userId).orElseThrow(UnauthenticatedException::new);
 
         Set<UserSong> songs = userSongService.getSongsForUser(
                 userId,
-                getDateWeeksFromToday(1),
+                getDateMonthsFromToday(1),
                 new Date()
         );
 
         Map<Long, Double> songOccurrences = new ConcurrentHashMap<>();
         songs.stream().parallel().forEach(userSong -> {
             Long songId = userSong.getSongId();
-            try (ExecutorService executorService = Executors.newFixedThreadPool(4)) {
-                Map<Long, Double> mapForSong = IntStream.range(0, 3)
+            try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
+                Map<Long, Double> mapForSong = IntStream.range(0, 11)
                         .mapToObj(i -> executorService.submit(
-                                        () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)
-                                                .entrySet()
-                                                .stream()
-                                )
-                        )
+                                () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)))
                         .map(future -> {
                             try {
                                 return future.get();
                             } catch (ExecutionException | InterruptedException e) {
-                                log.error("Exception happened: {}", e.getMessage());
+                                logError(e);
                             }
                             return null;
                         })
                         .filter(Objects::nonNull)
-                        .flatMap(Stream::parallel)
+                        .flatMap(Function.identity())
                         .collect(Collectors.toConcurrentMap(
-                                        Map.Entry::getKey,
-                                        Map.Entry::getValue,
-                                        Double::sum
-                                )
-                        );
+                                Map.Entry::getKey,
+                                Map.Entry::getValue,
+                                Double::sum));
                 mapForSong.entrySet().stream().parallel().forEach(
                         entry -> songOccurrences.merge(entry.getKey(), entry.getValue(), Double::sum)
                 );
@@ -198,7 +187,14 @@ public class RecommendationEngine {
         });
 
         log.info("finished creating recommendation for user {} in {}", userId, (System.currentTimeMillis() - start) / 1_000);
-        return sortMap(songOccurrences);
+        List<Long> sortedSongsIds = sortMap(songOccurrences);
+        sortedSongsIds = userSongService.filterOutRestrictedSongs(userId, sortedSongsIds);
+        if (sortedSongsIds.size() < 20) {
+            return Stream.concat(
+                    sortedSongsIds.stream(),
+                    defaultRecommendations(20L - sortedSongsIds.size(), sortedSongsIds).stream()).toList();
+        }
+        return sortedSongsIds;
     }
 
     public List<Long> createRecommendationsForAlbum(Long albumId, Long userId) {
@@ -210,37 +206,49 @@ public class RecommendationEngine {
         Map<Long, Double> songOccurrences = new ConcurrentHashMap<>();
         songs.stream().parallel().forEach(song -> {
             Long songId = song.getId();
-            try (ExecutorService executorService = Executors.newFixedThreadPool(4)) {
-                Map<Long, Double> mapForSong = IntStream.range(0, 3)
+            try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()) {
+                Map<Long, Double> mapForSong = IntStream.range(0, 11)
                         .mapToObj(i -> executorService.submit(
-                                        () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)
-                                                .entrySet()
-                                                .stream()
-                                )
-                        )
+                                () -> getSongsWithWeightedOccurrenceCount(songId, userId, i + 1)))
                         .map(future -> {
                             try {
                                 return future.get();
                             } catch (ExecutionException | InterruptedException e) {
-                                log.error("Exception happened: {}", e.getMessage());
+                                logError(e);
                             }
                             return null;
                         })
                         .filter(Objects::nonNull)
-                        .flatMap(Stream::parallel)
+                        .flatMap(Function.identity())
                         .collect(Collectors.toConcurrentMap(
-                                        Map.Entry::getKey,
-                                        Map.Entry::getValue,
-                                        Double::sum
-                                )
-                        );
+                                Map.Entry::getKey,
+                                Map.Entry::getValue,
+                                Double::sum));
                 mapForSong.entrySet().stream().parallel().forEach(
                         entry -> songOccurrences.merge(entry.getKey(), entry.getValue(), Double::sum)
                 );
             }
         });
 
-        return sortMap(songOccurrences);
+        List<Long> sortedSongsIds = sortMap(songOccurrences);
+        sortedSongsIds = userSongService.filterOutRestrictedSongs(userId, sortedSongsIds);
+        if (sortedSongsIds.size() < 20) {
+            return Stream.concat(
+                    sortedSongsIds.stream(),
+                    defaultRecommendations(20L - sortedSongsIds.size(), sortedSongsIds).stream()).toList();
+        }
+        return sortedSongsIds;
+    }
+
+
+    public List<Long> defaultRecommendations(Long limit, List<Long> excludedSongIds) {
+        return songRepository.findByProtectionTypeOrderByListenCount(
+                ProtectionType.PUBLIC, limit, excludedSongIds
+        );
+    }
+
+    public List<Long> defaultRecommendations() {
+        return defaultRecommendations(NON_AUTHENTICATED_USER_LIMIT, List.of());
     }
 
     private List<Long> sortMap(Map<Long, Double> songOccurrences) {
@@ -249,17 +257,19 @@ public class RecommendationEngine {
                 .stream()
                 .sorted((e1, e2) -> Double.compare(e2.getValue(), e1.getValue()))
                 .map(Map.Entry::getKey)
-                .toList();
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
-    private Date getDateWeeksFromToday(int weeksAgo) {
+    private Date getDateMonthsFromToday(int monthsAgo) {
         return Date.from(
                 LocalDate.now()
-                        .minusWeeks(weeksAgo)
+                        .minusMonths(monthsAgo)
                         .atStartOfDay()
-                        .toInstant(
-                                ZoneOffset.UTC
-                        )
+                        .toInstant(ZoneOffset.UTC)
         );
+    }
+
+    private void logError(Exception e) {
+        log.error("Exception happened: {}", e.getMessage());
     }
 }
